@@ -1,3 +1,7 @@
+2018-11-22 belangeo <belangeo@gmail.com>
+
+    * Added keyboard method to the Notein object (opens a virtual midi keyboard).
+
 2018-11-20 belangeo <belangeo@gmail.com>
 
     * Added a new object: PyoGuiKeyboard, a virtual MIDI keyboard.
